# internal/core/dtos/api_dtos.gen.go
@@ -3,6 +3,11 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package dto
 
+// The payload body to create a new project
+type CreateProjectRequestBody struct {
+	Name string `json:"name"`
+}
+
 // The payload body to create a translation
 type CreateProjectTranslationRequestBody struct {
 	Code string `json:"code"`
@@ -80,6 +85,9 @@ type ProjectTranslationsGetResponse struct {
 	Translations []TranslationKeyDTO `json:"translations"`
 }
 
+// PostProjectJSONBody defines parameters for PostProject.
+type PostProjectJSONBody CreateProjectRequestBody
+
 // DeleteProjectTranslationsJSONBody defines parameters for DeleteProjectTranslations.
 type DeleteProjectTranslationsJSONBody DeleteProjectTranslationRequestBody
 
@@ -94,6 +102,9 @@ type PostProjectTranslationJSONBody CreateProjectTranslationRequestBody
 
 // PutProjectTranslationJSONBody defines parameters for PutProjectTranslation.
 type PutProjectTranslationJSONBody EditProjectTranslationRequestBody
+
+// PostProjectJSONRequestBody defines body for PostProject for application/json ContentType.
+type PostProjectJSONRequestBody PostProjectJSONBody
 
 // DeleteProjectTranslationsJSONRequestBody defines body for DeleteProjectTranslations for application/json ContentType.
 type DeleteProjectTranslationsJSONRequestBody DeleteProjectTranslationsJSONBody
